juno/qa/apps/lectern/services.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lectern
  name: lectern
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: lectern
